// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > release > putRelease > 200 > ok 1`] = `
{
  "release": {
    "_id": "test",
  },
}
`;

exports[`routes > release > putRelease > audit > expected call 1`] = `
{
  "_id": "test",
}
`;
